[yi-around-ad_1.0.0.1 2018-06-29 PeterZhang]
1.新功能:增加附近美食功能

[yi-around-ad_1.0.0.1 2018-07-02 PeterZhang]
1.新功能:增加附近美食功能

[yi-around-ad_1.0.0.1 2018-08-20 PeterZhang]
1.新功能:增加附近美食店铺功能

[yi-around-ad_1.0.0.1 2018-08-24 PeterZhang]
1.新功能:增加直播功能
2.新功能:增加关注功能
3.新功能:增加会员说明功能
4.新功能:增加热词功能

[yi-around-ad_1.0.0.1 2018-08-26 PeterZhang]
1.新功能:增加更多功能
2.新功能:增加店铺详情功能
3.新功能:增加排行榜功能

--备注分类
1、新功能：
2、Bug:
3、需求变更：
4、重构：
5、merge:

--格式：
[yi-around-ad_1.0.0.1 2018-06-29 PeterZhang]
版本号 日期 提交人
版本号：产品名 版本类型 主版本 辅版本 新功能版本 缺陷版本