@@ -18,6 +18,9 @@
 2.新功能:增加店铺详情功能
 3.新功能:增加排行榜功能
 
+[yi-around-ad_1.0.0.1 2018-08-27 PeterZhang]
+1.新功能:增加店铺推荐功能
+
 --备注分类
 1、新功能：
 2、Bug:
